EVA-239 feat: Creación de condiciones en el modal de cerrar/reabrir actividad, index de actividades, y en el view de actividades.
-Se crea la condición en el index de actividades de poder ver también el modal cerrar/reabrir actividad cuando el estado de la actividad sea "Reabierta".
-Se agrega condición para el nombre del modal (Cerrar Actividad o Reabrir Actividad).
-Se agrega la condición en el view de CerrarReabrirActividad de poder cerrar la actividad cuando este en los estados de finalizada o en Reabierta. Se agrega poder cargar a la DB en usuario que modifica la actividad.

--- a/GestionActividades/templates/GestionActividades/Actividades/Index.html
+++ b/GestionActividades/templates/GestionActividades/Actividades/Index.html
@@ -251,7 +251,7 @@
                                                                                         {% endif %}
                                                                                     {% endif %}
                                                                                     {% if perms.GestionActividades.change_actividad %}
-                                                                                        {% if actividad.estado == EstadosActividades.FINALIZADO or actividad.estado == EstadosActividades.CERRADA %}
+                                                                                        {% if actividad.estado == EstadosActividades.FINALIZADO or actividad.estado == EstadosActividades.CERRADA or actividad.estado == EstadosActividades.REABIERTA%}
                                                                                             <div class="col-md-2">
                                                                                                 <small>
                                                                                                     <a class="fad fa-3x fa-lock-alt" id="cerrar_reabrir_actividad_{{ actividad.id }}" href="javascript:abrirModalCerrarReabrirActividad('{% url 'GestionActividades:actividades-cerrar-reabrir' actividad.id %}')" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Cerrar/Reabrir Actividad"></a>
