EVA-236 feat: Creación de templates para aprobar/rechazar modificaciones en una actividad.
-Creación del template para el modal de aprobar/rechazar modificaciones actividad.
-Creación del Index para las solicitudes de modificaciones en actividades.
-Creación del template para editar una actividad por parte del responsable.
-Creación de la opción en el menu del GA para visualizar las solicitudes de aprobación.

--- a/GestionActividades/templates/GestionActividades/_common/menu_aplicacion.html
+++ b/GestionActividades/templates/GestionActividades/_common/menu_aplicacion.html
@@ -14,4 +14,12 @@
         </a>
     </li>
 {% endif %}
+{% if perms.GestionActividades.view_modificacionactividad %}
+    <li  {% if menu_actual == 'solicitudes-aprobación' %} class="active" {% endif %}>
+        <a href="{% url 'GestionActividades:solicitudes-aprobacion-index' %}" title="Solicitudes Aprobacion" data-filter-tags="solicitudes-aprobación">
+            <i class="fal fa-tasks"></i>
+            <span class="nav-link-text" data-i18n="nav.gestion_actividades_solicitudes_aprobacion">Solicitudes de Aprobación</span>
+        </a>
+    </li>
+{% endif %}
 
