--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoActasContratos/index.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoActasContratos/index.html
@@ -44,6 +44,7 @@
                                             <thead class="bg-primary-600">
                                                 <tr>
                                                     <th data-priority="1" >Código</th>
+                                                    <th>Contrato Asociado</th>
                                                     <th>Fecha Suspensión</th>
                                                     <th>Fecha Reinicio</th>
                                                     <th class="min-tablet-l">Descripción</th>
@@ -60,6 +61,7 @@
                                                         <td><span id="copiar_{{ consecutivo.id }}">{{ consecutivo.codigo }}</span>
                                                             <span><a class="fad fa-copy" href="javascript:void(0);"  onclick="copiarAPortapapeles('{{ consecutivo.codigo }}')" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Copiar"></a></span>
                                                         </td>
+                                                        <td>{{ consecutivo.consecutivo_contrato.codigo}}</td>
                                                         <td>
                                                             {% if consecutivo.fecha_suspension %}
                                                                 {{ consecutivo.fecha_suspension | date:'Y-m-d'}}</td>
