--- a/GestionActividades/templates/GestionActividades/AprobacionActividades/index.html
+++ b/GestionActividades/templates/GestionActividades/AprobacionActividades/index.html
@@ -29,13 +29,13 @@
                                         <table class="table table-bordered w-100" id="dataTable">
                                             <thead class="bg-primary-600">
                                                 <tr>
-                                                    <th>Nombre Actividad</th>
-                                                    <th>Modificaciones</th>
+                                                    <th data-priority="1" >Nombre Actividad</th>
+                                                    <th>Descripción</th>
                                                     <th>Motivo Modificación</th>
-                                                    <th>Fecha Solicitud</th>
+                                                    <th class="none" >Fecha Solicitud</th>
                                                     <th>Comentario Aprobación/Rechazo</th>
-                                                    <th>Fecha Respuesta Solicitud</th>
-                                                    <th>Estado</th>
+                                                    <th class="none" >Fecha Respuesta Solicitud</th>
+                                                    <th data-priority="2" >Estado</th>
                                                     <th>Acción</th>
                                                 </tr>
                                             </thead>
@@ -43,7 +43,7 @@
                                                 {% for actividad in actividades %}
                                                     <tr>
                                                         <td>{{ actividad.nombre }}</td>
-                                                        <td></td>
+                                                        <td>{{ actividad.descripcion }}</td>
                                                         <td>{{ actividad.motivo }}</td>
                                                         <td>{{ actividad.fecha_solicitud|date:'Y-m-d' }}</td>
                                                         <td>{{ actividad.comentario_supervisor }}</td>
@@ -60,6 +60,11 @@
                                                         {% endif %}
                                                         </td>
                                                         <td>
+                                                            {% if perms.GestionActividades.view_modificacionactividad %}
+                                                                {% if actividad.estado != EstadosActividades.CERRADA %}
+                                                                    <a class="fad fa-2x fa-eye" id="editar_{{ actividad.id }}" href="javascript:abrirModalCrearActividad('{% url 'GestionActividades:ver-modificaciones-actividad' actividad.actividad_id %}')" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Ver Modificaciones"></a>
+                                                                {% endif %}
+                                                            {% endif %}
 {#                                                            <a class="far fa-2x fa-eye" style="padding-left: 10px; text-decoration: none !important;" href="{% url 'sgi:documentos-ver' %}" target="_blank" data-original-title="Ver"  data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="Ver Documento"></a>#}
                                                             &nbsp;&nbsp;<a class="far fa-2x fa-check-square" id="accion_modificaciones_actividad_{{ actividad.id }}"  href="javascript:abrirModalAccionActividad('{% url 'GestionActividades:accion-modificaciones-actividad' actividad.id %}');" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Aprobar/Rechazar"></a>
                                                         </td>
@@ -77,8 +82,8 @@
             </div>
         </div>
     </div>
-    <div class="modal fade" tabindex="-1" id="accion-actividad" role="dialog">
-    </div>
+    <div class="modal fade" tabindex="-1" id="accion-actividad" role="dialog" aria-hidden="true"></div>
+    <div class="modal fade" tabindex="-1" id="crear-actividad" role="dialog"  aria-hidden="true"></div>
 {% endblock %}
 {% block scripts %}
     {% include 'EVA/_common/_statics/_tablas.html' %}
@@ -89,4 +94,5 @@
     <script src="{% static 'EVA/Plantilla/js/custom/validaciones/validar_formulario.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/custom/controlBusquedaPaginacion.js' %}"></script>
     <script src="{% static 'GestionActividades/js/accion_actividad_modal.js' %}"></script>
+    <script src="{% static 'GestionActividades/js/actividades.js' %}"></script>
 {% endblock scripts%}
